# django_lesson_27

./: db.sqlite3  manage.py  pyproject.toml  pytest.ini
authentication/: admin.py  models.py  urls.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/: models.py  urls.py  views.py
companies/migrations/: 0001_initial.py
django_lesson_27/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixture.py  simple_test.py
tests/vacancies/: vacancy_list_test.py  vacancy_retrieve_test.py  vacansy_create_test.py
vacancies/: models.py  permissions.py  serializers.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_skill_alter_vacancy_options_vacancy_user_and_more.py  0003_skill_is_active.py  0004_vacancy_likes.py  0005_vacancy_min_experience.py  0006_vacancy_updated_ad.py
